[metadata]
name = oxCM
version = 1.0.0
author = fffatttihhh
author_email = fatihuzun@me.com
description = The oxCM Contour Method Solver
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = oxCM_package

[options.entry_points]
console_scripts =
    oxCM = oxCM_package.oxCM_module:oxCM