[metadata]
name = OxCM
version = 1.0.0
author = fffatttihhh
author_email = fatihuzun@me.com
description = The OxCM Contour Method Solver
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = OxCM_package

[options.entry_points]
console_scripts =
    OxCM = OxCM_package.OxCM_module:OxCM